# nirum

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .hlint.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  README.md  appveyor.yml  bitbucket-pipelines.yml  codecov.yml  docker-entrypoint.sh  lint.hs  lint.sh  nirum.cabal  package.yaml  pythontest.sh  setup.py  stack.yaml  test.sh  tox.ini
app/: nirum-docs.hs  nirum-quickstart.hs  nirum.hs  test-targets.hs
docs/: annotation.md  package.md  refactoring.md  serialization.md  transport.md  tutorial.md
examples/: README.md  address.nrm  blockchain.nrm  builtins.nrm  countries.nrm  geo.nrm  package.toml  pdf-service.nrm  product.nrm  shapes.nrm  types.nrm
src/Nirum/: Cli.hs  CodeBuilder.hs  CodeGen.hs  Constructs.hs  Docs.hs  Package.hs  Parser.hs  Quickstart.hs  Targets.hs  Version.hs
src/Nirum/Constructs/: Annotation.hs  Declaration.hs  DeclarationSet.hs  Docs.hs  Identifier.hs  Module.hs  ModulePath.hs  Name.hs  Service.hs  TypeDeclaration.hs  TypeExpression.hs
src/Nirum/Constructs/Annotation/: Internal.hs
src/Nirum/Docs/: Html.hs  ReStructuredText.hs
src/Nirum/Package/: Metadata.hs  ModuleSet.hs
src/Nirum/Package/Metadata/: Writer.hs
src/Nirum/Targets/: Docs.hs  Elm.hs  Elm.hs-boot  JavaScript.hs  List.hs  Python.hs  Python.hs-boot  Rust.hs  TypeScript.hs  TypeScript.hs-boot
src/Nirum/Targets/Elm/: CodeGen.hs  Encoder.hs  TypeExpression.hs  Types.hs
src/Nirum/Targets/Python/: CodeGen.hs  Deserializers.hs  Serializers.hs  TypeExpression.hs  Validators.hs
src/Nirum/Targets/Rust/: Item.hs  Keyword.hs  ModuleTree.hs
src/Nirum/Targets/TypeScript/: Context.hs  TypeExpression.hs
src/Nirum/TypeInstance/: BoundModule.hs
test/: HLint.hs  Util.hs
test/Nirum/: CliSpec.hs  CodeBuilderSpec.hs  CodeGenSpec.hs  DocsSpec.hs  PackageSpec.hs  ParserSpec.hs  TargetsSpec.hs  TestFixtures.hs  VersionSpec.hs
test/Nirum/Constructs/: AnnotationSpec.hs  DeclarationSetSpec.hs  DeclarationSpec.hs  DocsSpec.hs  IdentifierSpec.hs  ModulePathSpec.hs  ModuleSpec.hs  NameSpec.hs  ServiceSpec.hs  TypeDeclarationSpec.hs  TypeExpressionSpec.hs
test/Nirum/Docs/: HtmlSpec.hs  ReStructuredTextSpec.hs
test/Nirum/Package/: MetadataSpec.hs  ModuleSetSpec.hs
test/Nirum/Package/Metadata/: WriterSpec.hs
test/Nirum/Targets/: DocsSpec.hs  JavaScriptSpec.hs  PythonSpec.hs  RustSpec.hs
test/Nirum/Targets/Python/: CodeGenSpec.hs  TypeExpressionSpec.hs
test/Nirum/TypeInstance/: BoundModuleSpec.hs
test/import_error/: import_error.nrm  package.toml
test/metadata_field_error/: package.toml
test/metadata_field_type_error/: package.toml
test/metadata_field_value_error/: package.toml
test/metadata_format_error/: package.toml
test/nirum_fixture/: package.toml
test/nirum_fixture/fixture/: alias.nrm  constraints.nrm  datetime.nrm  foo.nrm  name.nrm  norm.nrm  qux.nrm  reserved-keyword-enum.nrm  reserved-keyword-union.nrm  types.nrm
test/nirum_fixture/fixture/foo/: bar.nrm
test/nirum_fixture/renames/test/: foo.nrm
test/nirum_fixture/renames/test/foo/: bar.nrm
test/nirum_fixture_async/: foo_async.nrm  package.toml
test/parse-error/: missing-semicolon.nrm
test/python/: alias_test.py  annotation_test.py  constraints_test.py  docs_test.py  primitive_test.py  renames_test.py  requirements.txt  serialization_test.py  service_test.py  setup_test.py  typeconversion_test.py  validation_test.py
test/scan_error/: scan_error.nrm
test/serialization/: .check
test/serialization/enums/: enums-female.json  enums-male.json
test/serialization/identifiers/: normalize.json.ignore
test/serialization/map-types/: record.json
test/serialization/names/: behind_name.json
test/serialization/primitive-types/: date-invalid-formats.json  date.json  datetime-invalid-formats.json  datetime.json  uuid-hex.json  uuid.json
test/serialization/records/: emit-type.json  extra-fields.json  missing-fields.json  non-object.json  option-fields.json  option-fields2.json  unknown-fields.json
test/serialization/sets/: duplicate-elements.json  record.json
test/serialization/unboxed-types/: enum.json  list.json  number.json  record.json  set.json  string.json  unboxed.json  union.json
test/serialization/unions/: default-tag.json  external-tag.json  missing-fields.json  missing-tag.json  non-object.json  optional-field.json  unknown-fields.json
