name:                nirum
version:             0.3.0
synopsis:            IDL compiler and RPC/distributed object framework for
                     microservices
description:         Nirum is an IDL compiler and RPC/distributed object
                     framework for microservices, built on top of the modern
                     Web server technologies such as RESTful HTTP and JSON.
                     .
                     You can find how its IDL looks like from source codes in
                     the examples/ directory.
                     .
                     See also README.md for more details.
homepage:            https://github.com/spoqa/nirum
bug-reports:         https://github.com/spoqa/nirum/issues
license:             GPL-3
license-file:        LICENSE
author:              Nirum team
maintainer:          Nirum team
copyright:           (c) 2016 Nirum team
stability:           alpha
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Nirum.Cli
                 ,     Nirum.CodeGen
                 ,     Nirum.Constructs
                 ,     Nirum.Constructs.Annotation
                 ,     Nirum.Constructs.Annotation.Internal
                 ,     Nirum.Constructs.Declaration
                 ,     Nirum.Constructs.DeclarationSet
                 ,     Nirum.Constructs.Docs
                 ,     Nirum.Constructs.Identifier
                 ,     Nirum.Constructs.Module
                 ,     Nirum.Constructs.ModulePath
                 ,     Nirum.Constructs.Name
                 ,     Nirum.Constructs.Service
                 ,     Nirum.Constructs.TypeDeclaration
                 ,     Nirum.Constructs.TypeExpression
                 ,     Nirum.Package
                 ,     Nirum.Package.Metadata
                 ,     Nirum.Package.ModuleSet
                 ,     Nirum.Parser
                 ,     Nirum.Targets
                 ,     Nirum.Targets.JavaScript
                 ,     Nirum.Targets.List
                 ,     Nirum.Targets.Python
                 ,     Nirum.Version
  build-depends:       base                     >=4.7     && <5
               ,       bytestring
               ,       containers               >=0.5.6.2 && <0.6
               ,       cmdargs                  >=0.10.14 && <0.11
               ,       directory                >=1.2.5   && <1.4
               ,       email-validate           >=2.0.0   && <3.0.0
               ,       filepath                 >=1.4     && <1.5
               ,       htoml                    >=1.0.0.0 && <1.1.0.0
               ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
               ,       megaparsec               >=5       && <5.3
               ,       mtl                      >=2.2.1   && <3
               ,       parsec
                       -- only for dealing with htoml's ParserError
               ,       semver                   >=0.3.0   && <1.0
               ,       template-haskell         >=2.11    && <3
               ,       text                     >=0.9.1.0 && <1.3
               ,       unordered-containers
                       -- only for dealing with htoml's data structures
               ,       uri                      >=0.1     && <1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror
                       -fwarn-incomplete-uni-patterns
                       -fprint-explicit-kinds

executable nirum
  build-depends:       base   >=4.7     && <5
               ,       nirum
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
                       -threaded -with-rtsopts=-N

executable nirum-static
  build-depends:       base   >=4.7     && <5
               ,       nirum
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
                       -threaded -with-rtsopts=-N
                       -static

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Nirum.CliSpec
               ,       Nirum.CodeGenSpec
               ,       Nirum.Constructs.AnnotationSpec
               ,       Nirum.Constructs.DocsSpec
               ,       Nirum.Constructs.DeclarationSetSpec
               ,       Nirum.Constructs.IdentifierSpec
               ,       Nirum.Constructs.ModuleSpec
               ,       Nirum.Constructs.ModulePathSpec
               ,       Nirum.Constructs.NameSpec
               ,       Nirum.Constructs.ServiceSpec
               ,       Nirum.Constructs.TypeDeclarationSpec
               ,       Nirum.Constructs.TypeExpressionSpec
               ,       Nirum.Package.MetadataSpec
               ,       Nirum.Package.ModuleSetSpec
               ,       Nirum.PackageSpec
               ,       Nirum.ParserSpec
               ,       Nirum.Targets.JavaScriptSpec
               ,       Nirum.Targets.PythonSpec
               ,       Nirum.TargetsSpec
               ,       Nirum.VersionSpec
               ,       Util
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  -- omit version specifiers for shared dependencies to library
  build-depends:       base
               ,       bytestring
               ,       containers
               ,       directory
               ,       email-validate
               ,       filepath
               ,       hspec
               ,       hspec-core
               ,       hspec-meta
               ,       htoml
               ,       interpolatedstring-perl6
               ,       megaparsec
               ,       mtl
               ,       nirum
               ,       parsec
                       -- only for dealing with htoml's ParserError
               ,       process                  >=1.1     && <2
               ,       semigroups
               ,       semver
               ,       string-qq                >=0.0.2   && <0.1.0
               ,       temporary                >=1.2     && <1.3
               ,       text
  ghc-options:         -Wall -Werror
                       -fno-warn-incomplete-uni-patterns
                       -fno-warn-missing-signatures
                       -threaded -with-rtsopts=-N

test-suite hlint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  default-language:    Haskell2010
  -- omit version specifiers for shared dependencies to library
  build-depends:       base
               ,       hlint       >=1.9     && <2
